--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "scripts": {
     "start": "webpack-dev-server --progress --colors --watch",
-    "build": "webpack --progress --colors",
+    "build": "webpack --progress --colors -d",
+    "prod": "webpack --progress --colors -p",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
